Sesion5_DesplegandoContenedores_Ivan/part-3/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-services
spec:
  rules:
  - host: jenkins.acme.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8000
  - host: gogs.acme.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gogs
            port:
              number: 3000
